--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-dist: trusty
+# [Travis CI Documentation](https://docs.travis-ci.com/)
+
+dist: xenial
 
 addons:
   apt:
@@ -12,7 +14,7 @@ addons:
       - zlib1g-dev
       - unzip
       - python
-      - clang-format
+      - clang-format-3.8
 
 before_install:
   - wget https://github.com/bazelbuild/bazel/releases/download/0.26.1/bazel_0.26.1-linux-x86_64.deb
