--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ before_install:
   - sudo dpkg -i bazel_0.26.1-linux-x86_64.deb
 
 script:
-- bazel build //...
+- bazel build //third_party/quickfix:quickfix_lib
