WIP: train ride home

--- a/protos/BUILD
+++ b/protos/BUILD
@@ -1,3 +1,5 @@
+# Exchange Entity
+
 # Convention:
 # A cc_proto_library that wraps a proto_library named foo_proto
 # should be called foo_cc_proto.
@@ -12,6 +14,28 @@ cc_proto_library(
 proto_library(
     name = "exchange_proto",
     srcs = ["exchange.proto"],
-    deps = [
-    ],
+)
+
+# Order Entity
+
+cc_proto_library(
+    name = "order_cc_proto",
+    deps = [":order_proto"],
+)
+
+proto_library(
+    name = "order_proto",
+    srcs = ["order.proto"],
+)
+
+# Instrument Entity
+
+cc_proto_library(
+    name = "instrument_cc_proto",
+    deps = [":instrument_proto"],
+)
+
+proto_library(
+    name = "instrument_proto",
+    srcs = ["instrument.proto"],
 )
