--- a/applications/exchanges/fix/fake_server/BUILD
+++ b/applications/exchanges/fix/fake_server/BUILD
@@ -1,6 +1,6 @@
 # Copyright 2019 Stewart Henderson. All rights reserved.
 
-load("//tools:clang_format.bzl",
+load("//tools:clang_format.bzl", 
     "clang_formatted_cc_binary",
     "clang_formatted_cc_library"
 )
@@ -22,14 +22,6 @@ filegroup(
     name = "applications_exchanges_fix_fake_server_srcs",
     srcs = glob([
         "srcs/*.cc",
-    ]),
-)
-
-filegroup(
-    name = "applications_exchanges_fix_fake_server_test_srcs",
-    srcs = glob([
-        "tests/*.cc",
-        "tests/*.h"
     ]),
 )
 
@@ -55,19 +47,6 @@ clang_formatted_cc_binary(
     ],
     deps = [
         ":applications_exchanges_fix_fake_server_library",
-        "//applications/exchanges/fix/base:applications_exchanges_fix_base_library",
-        "//applications/exchanges/fix/quickfix:applications_exchanges_fix_quickfix_library",
-    ],
-)
-
-# TODO: clang_formatted_
-cc_test(
-    name = "trading_exchanges_base_fix_tests",
-    srcs = [":applications_exchanges_fix_fake_server_test_srcs"],
-    size = "small",
-    visibility = ["//visibility:private"],
-    copts = ["-Iexternal/gtest/include"],
-    deps = [
-        "@com_github_google_test//:gtest_main",
+        "//third_party/quickfix:quickfix_lib",
     ],
 )
