--- a/src/libraries/protos/risk/BUILD
+++ b/src/libraries/protos/risk/BUILD
@@ -1,4 +1,7 @@
-load("@build_stack_rules_proto//cpp:cpp_proto_compile.bzl", "cpp_proto_compile")
+# [Bazel `visibility` attribute](https://docs.bazel.build/versions/master/be/common-definitions.html)
+package(default_visibility = ["//visibility:public"])
+
+load("@build_stack_rules_proto//cpp:cpp_proto_library.bzl", "cpp_proto_library")
 
 proto_library(
     name = "risk_proto",
@@ -7,6 +10,9 @@ proto_library(
         "bankroll.proto",
         "asset.proto",
         "portfolio.proto",
+        "currency.proto",
+        "tradeprice.proto",
+        "venue.proto"
     ],
     visibility = [
         "//visibility:public",
@@ -16,7 +22,7 @@ proto_library(
 )
 
 # bazel build //src/libraries/protos/risk:trading_risk_cpp_proto
-cpp_proto_compile(
+cpp_proto_library(
     name = "trading_risk_cpp_proto",
     deps = [":risk_proto"],
 )
