--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
     -   id: check-json
     -   id: detect-private-key
     -   id: end-of-file-fixer
+    -   id: requirements-txt-fixer
     -   id: pretty-format-json
         args: [
           '--autofix',
@@ -51,11 +52,26 @@ repos:
         - etc/license-header
         - --comment-style
         - //
+    -   id: insert-license
+        files: \.py
+        args:
+        - --license-filepath
+        - etc/license-header
 -   repo: https://github.com/Yelp/detect-secrets
     rev: v0.13.0
     hooks:
     -   id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.740
+    hooks:
+    -   id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports]
+-   repo: https://github.com/psf/black
+    rev: stable
+    hooks:
+    -   id: black
+        language_version: python3.7
 # -   repo: https://github.com/pocc/pre-commit-hooks.git
 #     rev: v0.2.0
 #     hooks:
