--- a/src/libraries/protos/risk/BUILD
+++ b/src/libraries/protos/risk/BUILD
@@ -2,6 +2,7 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@build_stack_rules_proto//cpp:cpp_proto_library.bzl", "cpp_proto_library")
+load("@build_stack_rules_proto//python:python_proto_library.bzl", "python_proto_library")
 
 proto_library(
     name = "risk_proto",
@@ -25,4 +26,10 @@ proto_library(
 cpp_proto_library(
     name = "trading_risk_cpp_proto",
     deps = [":risk_proto"],
+)
+
+python_proto_library(
+    name = "trading_risk_python_proto",
+    deps = [":risk_proto"],
+    verbose = 3
 )
