WIP: C++ unit tests

--- a/src/libraries/pricing/currency/spot/arbitrage/BUILD
+++ b/src/libraries/pricing/currency/spot/arbitrage/BUILD
@@ -18,45 +18,27 @@ filegroup(
     ]),
 )
 
-load(
-    "@rules_python//python:python.bzl",
-    "py_library",
-    "py_test",
-)
-
-load("@libraries_pricing_currency_spot_arbitrage//:requirements.bzl", "requirement")
-
-PY_DEPENDENCIES = [
-    requirement("structlog"),
-]
-
-py_library(
-    name = "libraries_pricing_currency_spot_arbitrage",
-    srcs = glob(["src/*.py"]),
-    deps = PY_DEPENDENCIES,
-)
-
-py_test(
-    name = "libraries_pricing_currency_spot_arbitrage_library_tests",
-    srcs = glob([
-        "tests/*.py",
-        ]),
-    deps = [
-        ":libraries_pricing_currency_spot_arbitrage_library"
-    ],
-    main = "tests/main.py"
-)
-
 cc_library(
     name = "libraries_pricing_currency_spot_arbitrage_library",
-    srcs = [
-        ":libraries_pricing_currency_spot_arbitrage_incs"
-    ],
-    hdrs = [
-        ":libraries_pricing_currency_spot_arbitrage_srcs"
-    ],
+    srcs = [":libraries_pricing_currency_spot_arbitrage_srcs"],
+    hdrs = [":libraries_pricing_currency_spot_arbitrage_incs"],
+    includes = [":libraries_pricing_currency_spot_arbitrage_incs"],
     deps = [
         "//src/libraries/protos/risk:trading_risk_cpp_proto"
     ],
     linkstatic=1
+)
+
+cc_test(
+    name = "libraries_pricing_currency_spot_arbitrage_library_tests",
+    srcs = [
+        "tests/unit/calculation_tests.cc"
+    ],
+    size = "small",
+    visibility = [
+        "//visibility:private",
+    ],
+    deps = [
+     "@com_google_googletest//:gtest_main",
+    ]
 )
