WIP: performance tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,5 @@ script:
 - bazel build //src/libraries/pricing/currency/spot/arbitrage:libraries_pricing_currency_spot_arbitrage_library
 # Blackjack library
 - bazel build //src/libraries/blackjack:blackjack_library
+# Currency Arbitrage Performance Tests
+- bazel test //src/libraries/pricing/currency/spot/arbitrage:libraries_pricing_currency_spot_arbitrage_library_performance_tests
