--- a/src/applications/exchanges/fix/base/BUILD
+++ b/src/applications/exchanges/fix/base/BUILD
@@ -1,11 +1,5 @@
 # Copyright 2019 Stewart Henderson. All rights reserved.
 
-load("//tools:clang_format.bzl",
-    "clang_formatted_cc_binary",
-    "clang_formatted_cc_library"
-)
-
-
 # [Bazel `visibility` attribute](https://docs.bazel.build/versions/master/be/common-definitions.html)
 
 package(default_visibility = ["//visibility:public"])
@@ -19,7 +13,7 @@ filegroup(
     ]),
 )
 
-clang_formatted_cc_library(
+cc_library(
     name = "applications_exchanges_fix_base_library",
     srcs = [
         ":applications_exchanges_fix_base_incs"
@@ -30,6 +24,6 @@ clang_formatted_cc_library(
     strip_include_prefix = "incs",
     linkstatic=1,
     deps = [
-        "//applications/exchanges/fix/quickfix:applications_exchanges_fix_quickfix_library",
+        "//src/applications/exchanges/fix/quickfix:applications_exchanges_fix_quickfix_library",
     ]
 )
