--- a/src/applications/exchanges/fix/fake_server/BUILD
+++ b/src/applications/exchanges/fix/fake_server/BUILD
@@ -1,10 +1,5 @@
 # Copyright 2019 Stewart Henderson. All rights reserved.
 
-load("//tools:clang_format.bzl",
-    "clang_formatted_cc_binary",
-    "clang_formatted_cc_library"
-)
-
 # [Bazel `visibility` attribute](https://docs.bazel.build/versions/master/be/common-definitions.html)
 
 package(default_visibility = ["//visibility:public"])
@@ -33,7 +28,7 @@ filegroup(
     ]),
 )
 
-clang_formatted_cc_library(
+cc_library(
     name = "applications_exchanges_fix_fake_server_library",
     srcs = [
         ":applications_exchanges_fix_fake_server_incs"
@@ -48,15 +43,15 @@ clang_formatted_cc_library(
     ]
 )
 
-clang_formatted_cc_binary(
+cc_binary(
     name = "applications_exchanges_fix_fake_server",
     srcs = [
         ":applications_exchanges_fix_fake_server_srcs",
     ],
     deps = [
         ":applications_exchanges_fix_fake_server_library",
-        "//applications/exchanges/fix/base:applications_exchanges_fix_base_library",
-        "//applications/exchanges/fix/quickfix:applications_exchanges_fix_quickfix_library",
+        "//src/applications/exchanges/fix/base:applications_exchanges_fix_base_library",
+        "//src/applications/exchanges/fix/quickfix:applications_exchanges_fix_quickfix_library",
     ],
 )
 
