--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,5 @@ before_install:
   - sudo dpkg -i bazel_${BAZEL_VERSION}-linux-x86_64.deb
 
 script:
-- bazel build //...
+  - bazel build //...
+  - bazel test //...
