--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 # [Travis CI Documentation](https://docs.travis-ci.com/)
-
+language: cpp
+compiler: clang
 dist: xenial
+cache:
+  directories:
+    - $HOME/.bzrepos
+    - $HOME/.cache/bazel
 env:
   global:
-    - BAZEL_VERSION=0.26.1
+    - BAZEL_VERSION=2.1.0
 addons:
   apt:
     sources:
@@ -23,4 +28,5 @@ before_install:
   - sudo dpkg -i bazel_${BAZEL_VERSION}-linux-x86_64.deb
 
 script:
-- bazel build //...
+  - bazel build //...
+  - bazel test //...
