--- a/src/libraries/pricing/base/BUILD
+++ b/src/libraries/pricing/base/BUILD
@@ -43,11 +43,11 @@ cc_library(
 #     ]
 # )
 
-cc_test(
-  name = "libraries_pricing_currency_spot_arbitrage_library_performance_tests",
-  srcs = ["tests/performance/calculation_tests.cc"],
-  deps = [
-    "@com_github_google_benchmark//:benchmark_main",
-    ":libraries_pricing_currency_spot_arbitrage_library",
-  ]
-)
+# cc_test(
+#   name = "libraries_pricing_currency_spot_arbitrage_library_performance_tests",
+#   srcs = ["tests/performance/calculation_tests.cc"],
+#   deps = [
+#     "@com_github_google_benchmark//:benchmark_main",
+#     ":libraries_pricing_currency_spot_arbitrage_library",
+#   ]
+# )
