--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,6 +43,8 @@ repos:
 -   repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.1.7
     hooks:
+    -   id: forbid-crlf
+    -   id: remove-crlf
     -   id: insert-license
         files: \.cc
         args:
